tests/compile_failure/src/Utility/FloatingPoint.int.fail.cpp
#include <Phi/Utility/FloatingPoint.hpp>

int main()
{
    phi::FloatingPoint<int> f{3};
}
